<resources>
    <string name="app_name">SecretShoppers</string>

    <string name="name_establishment_textView">Name Of Establishment</string>
    <string name="name_establishemnt_editText"> </string>
    <string name="name_establishment_editTextHint">Enter name</string>

    <string name="employee_mood_textView">Employee Attitude</string>
    <string name="happy_checkBox">Happy :)</string>
    <string name="annoyed_checkBox">Annoyed >:-( </string>
    <string name="fair_checkBox">Fair :| </string>

    <string name="rating_scale_spinner_textView">Rating Scale</string>

    <string name="employee_help_textView">Were you Helped?</string>
    <string name="yes_RadioButton">YES</string>
    <string name="no_RadioButton">NO</string>
    <string name="ask_RadioButton">I Had to Asked For Help</string>



    <string name="current_score_textView">Current Score</string>

    <string name="final_score_textView">Final Score</string>

    <string-array name="RatingScale">
        <item>10</item>
        <item>9</item>
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>




    <string name="knowledgeable_textView">How Knowledgeable was the worker with his department?</string>
    <string name="very_CheckBox">Very Knowledgeable</string>
    <string name="not_CheckBox">Not Knowledgeable</string>
    <string name="needed_help_CheckBox">Employee needed help from another Employee.</string>

    <string name="comments_TextView">Any Comments that you may have?</string>
    <string name="comments_EditText"></string>
    <string name="clear_comment_button">Clear comments</string>
    <string name="submit_comment_button">Submit</string>
    <string name="comment_edittext_Hint">Enter Comment(s) Here</string>
    <string name="comment_toast_toastview">The comment(s) have been submitted.</string>
    <string name="current_score_EditText">Overall Score</string>
    <string name="clear_Button">Clear</string>


</resources>
