<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_secret_shoppers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.ebookfrenzy.secretshoppers.SecretShoppers">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayoutOne">



        <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/name_establishment_textView"
        android:id="@+id/nameEstablishmentTextView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_establishemnt_editText"
            android:hint="@string/name_establishment_editTextHint"
            android:id="@+id/nameEstablishmentEditText"
            android:inputType="text" /></LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayoutOne">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employee_mood_textView"
            android:id="@+id/employeeMoodTextView"
            android:layout_alignParentStart="true"
            android:layout_marginTop="80dp"
            />

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/happy_checkBox"
                android:id="@+id/happyCheckBox"
            android:layout_below="@+id/employeeMoodTextView"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fair_checkBox"
            android:id="@+id/fairCheckBox"
            android:layout_alignBottom="@+id/annoyedCheckBox"
            android:layout_toEndOf="@+id/happyCheckBox"
            android:layout_marginStart="27dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annoyed_checkBox"
            android:id="@+id/annoyedCheckBox"
            android:layout_alignBaseline="@+id/happyCheckBox"
            android:layout_alignBottom="@+id/happyCheckBox"
            android:layout_toEndOf="@+id/fairCheckBox"
            android:layout_marginStart="37dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutTwo"
        android:orientation="vertical"
        android:layout_below="@id/relativeLayoutOne">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingSpinnerTextView"
            android:text="@string/rating_scale_spinner_textView"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/RatingScale">
        </Spinner>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutTwo"
        android:layout_below="@+id/linearLayoutTwo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/employeeHelpTextView"
            android:text="@string/employee_help_textView"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/employeeHelpRadioGroup"
            android:layout_below="@+id/employeeHelpTextView"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yesRadioButton"
                android:text="@string/yes_RadioButton"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/noRadioButton"
                android:text="@string/no_RadioButton"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/askRadioButton"
                android:text="@string/ask_RadioButton"/>
        </RadioGroup>
    </RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/relativeLayoutThree"
    android:layout_below="@id/relativeLayoutTwo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/knowledgeableTextView"
        android:text="@string/knowledgeable_textView"
        android:textSize="13sp"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/veryCheckBox"
        android:text="@string/very_CheckBox"
        android:layout_below="@id/knowledgeableTextView"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/neededHelpCheckBox"
        android:text="@string/needed_help_CheckBox"
        android:layout_below="@+id/veryCheckBox"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notCheckBox"
        android:text="@string/not_CheckBox"
        android:layout_below="@+id/neededHelpCheckBox"
        android:layout_alignParentStart="true" />

</RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutFour"
        android:layout_below="@id/relativeLayoutThree">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/commentTextView"
            android:text="@string/comments_TextView"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/commentEditText"
            android:hint="@string/comment_edittext_Hint"
            android:inputType="text"
            android:layout_below="@id/commentTextView"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitCommentButton"
            android:text="@string/submit_comment_button"
            android:layout_below="@id/commentEditText"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clearCommentButton"
            android:text="@string/clear_comment_button"
            android:layout_below="@id/commentEditText"
            android:layout_alignRight="@id/commentEditText"/>



    </RelativeLayout>



</RelativeLayout>
